--- a/style.css
+++ b/style.css
@@ -475,13 +475,13 @@ iframe {
   left: 0;
   width: 100%;
   height: 5px;
-  background-color: #f0e7db;
+  background-color: transparent;
   z-index: 9999;
 }
 
 #scrollBar {
-  height: 100%;
+  height: 5px;
+  background-color: #d4a373; /* o el color que desees */
   width: 0%;
-  background-color: #b08968;
-  transition: width 0.2s ease-out;
+  transition: width 0.1s ease-out;
 }
