--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ h2 {
 h3,
 p {
   margin: 16px;
+ 
 }
 
 .pantalla {
@@ -469,19 +470,24 @@ iframe {
     font-size: 5rem;
   }
 }
-#scrollBarContainer {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 5px;
-  background-color: transparent;
-  z-index: 9999;
+#aparcamiento ul {
+  
+  max-width: 600px;
+  margin: 0 auto;
+  text-align: center;
 }
 
-#scrollBar {
-  height: 5px;
-  background-color: #d4a373; /* o el color que desees */
-  width: 0%;
-  transition: width 0.1s ease-out;
+#aparcamiento li {
+  margin-bottom: 15px;
+  
+}
+
+#aparcamiento a {
+ text-align: start;
+  color: var(--color-text);
+  
+}
+.map-icon {
+  display: inline-block;
+  margin-right: 5px;
 }
