--- a/style.css
+++ b/style.css
@@ -485,7 +485,7 @@ iframe {
 #aparcamiento a {
  text-align: start;
   color: var(--color-text);
-  
+  text-decoration: none;
 }
 .map-icon {
   display: inline-block;
